Made changes to practice git

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="logo">Parth</div>
+        <div class="logo">Parth K</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
